2005-04-22  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/cellrenderer.hg: Add documentation 
	saying that signal_editing_started() does not 
	work, so use the C API.
	* gtk/src/combobox.hg: Added TODO comment 
	for a future ABI break.

2005-04-19  Murray Cumming <murrayc@murrayc.com>

	* configure.in:
	* examples/book/Makefile.am:
	* examples/book/comboboxentry/.cvsignore:
	* examples/book/comboboxentry/Makefile.am:
	* examples/book/comboboxentry/complex/.cvsignore:
	* examples/book/comboboxentry/complex/Makefile.am:
	* examples/book/comboboxentry/complex/examplewindow.cc:
	* examples/book/comboboxentry/complex/examplewindow.h:
	* examples/book/comboboxentry/complex/main.cc:
	* examples/book/comboboxentry/text/.cvsignore:
	* examples/book/comboboxentry/text/Makefile.am:
	* examples/book/comboboxentry/text/examplewindow.cc:
	* examples/book/comboboxentry/text/examplewindow.h:
	* examples/book/comboboxentry/text/main.cc:
        Added ComboBoxEntry and ComboBoxEntryText examples, 
	based on the existing ComboBox and ComboBoxText 
	examples.

2005-04-15  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus_and_toolbars/Makefile.am:
	* examples/book/menus_and_toolbars/rain.png:
	Add missing rain.png file and distribute it.
	* examples/book/menus_and_toolbars/examplewindow.cc:
	Catch the exception if the pixbuf file is not found.

2005-04-07  Murray Cumming <murrayc@murrayc.com>

	* gdk/src/display.hg:
	* gdk/src/displaymanager.hg:
	* gdk/src/pixbufloader.hg:
	* gdk/src/screen.hg:
	* gtk/src/accelgroup.hg:
	* gtk/src/action.hg:
	* gtk/src/actiongroup.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/cellrenderertoggle.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/combobox.hg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/filechooser.hg:
	* gtk/src/fontbutton.hg:
	* gtk/src/radioaction.hg:
	* gtk/src/radiomenuitem.hg:
	* gtk/src/range.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/togglebutton.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/toolbutton.hg:
	* gtk/src/toolitem.hg: