@@ -53,7 +53,7 @@ public:
    * directly instead.
    */
   _CTOR_DEFAULT
-  
+
 
   /** Simple Push Button with label.
    * Create a button with the given label inside. You won't be able
@@ -61,6 +61,11 @@ public:
    * in it
    */
   explicit Button(const Glib::ustring& label, bool mnemonic = false);
+
+  /** Creates a new Button containing the image and text from a stock item.
+   * Stock ids have identifiers like Gtk::Stock::OK and Gtk::Stock::APPLY.
+   * @param stock_id The stock item.
+   */
   explicit Button(const StockID& stock_id);
 
 
@@ -89,7 +94,7 @@ public:
   _WRAP_METHOD(void set_image(Widget& image), gtk_button_set_image)
   _WRAP_METHOD(Widget* get_image(), gtk_button_get_image)
   _WRAP_METHOD(const Widget* get_image() const, gtk_button_get_image)
-   
+
   _WRAP_SIGNAL(void pressed(), "pressed")
   _WRAP_SIGNAL(void released(), "released")
   _WRAP_SIGNAL(void clicked(), "clicked")
