@@ -1975,6 +1975,84 @@ Same as gtk_text_iter_forward_search(), but moves backward.
 </return>
 </function>
 
+<function name="gtk_button_get_image">
+  <description>
+    Gets the widget that is currenty set as the image of @button.
+    This may have been explicitly set by set_image()
+    or specified as a stock item to the constructor.
 
+    Since: 2.6
+
+  </description>
+  <parameters>
+    <parameter name="button">
+      <parameter_description> a #GtkButton
+      </parameter_description>
+    </parameter>
+  </parameters>
+  <return></return>
+</function>
+
+
+<function name="gtk_image_set_from_stock">
+  <description>
+    See the Image::Image(const Gtk::StockID&amp; stock_id, IconSize size) constructor for details.
+  </description>
+  <parameters>
+    <parameter name="image">
+      <parameter_description> a #GtkImage
+      </parameter_description>
+    </parameter>
+    <parameter name="stock_id">
+      <parameter_description> a stock icon name
+      </parameter_description>
+    </parameter>
+    <parameter name="size">
+      <parameter_description> a stock icon size
+      </parameter_description>
+    </parameter>
+  </parameters>
+  <return></return>
+</function>
+
+<function name="gtk_icon_factory_add_default">
+  <description>
+    Adds an icon factory to the list of icon factories searched by
+    gtk_style_lookup_icon_set(). This means that, for example,
+    the Image::Image(const Gtk::StockID&amp; stock_id, IconSize size) constructor will be able to find icons in @factory.
+    There will normally be an icon factory added for each library or
+    application that comes with icons. The default icon factories
+    can be overridden by themes.
+  </description>
+  <parameters>
+    <parameter name="factory">
+      <parameter_description> a #GtkIconFactory
+      </parameter_description>
+    </parameter>
+  </parameters>
+  <return></return>
+</function>
+
+<function name="gtk_tool_button_set_stock_id">
+  <description>
+    Sets the name of the stock item. See the ToolButton::ToolButton(const Gtk::StockID&amp; stock_id, IconSize size) constructor.
+    The stock_id property only has an effect if not
+    overridden by &quot;label&quot; and &quot;icon_widget&quot; properties.
+
+    Since: 2.4
+
+  </description>
+  <parameters>
+    <parameter name="button">
+      <parameter_description> a #GtkToolButton
+      </parameter_description>
+    </parameter>
+    <parameter name="stock_id">
+      <parameter_description> a name of a stock item, or %NULL
+      </parameter_description>
+    </parameter>
+  </parameters>
+  <return></return>
+</function>
 
 </root>
