@@ -61,10 +61,18 @@ public:
   _WRAP_CTOR(Image(const Glib::RefPtr<Gdk::Image>& image, const Glib::RefPtr<Gdk::Bitmap>& mask), gtk_image_new_from_image)
   _WRAP_CTOR(Image(const std::string& file), gtk_image_new_from_file)
   _WRAP_CTOR(Image(const Glib::RefPtr<Gdk::Pixbuf>& pixbuf), gtk_image_new_from_pixbuf)
+
+  /** Creates am Image displaying a stock icon.
+   * Sample stock icon identifiers are Gtk::Stock::OPEN, Gtk::Stock::EXIT. Sample stock sizes are Gtk::ICON_SIZE_MENU, Gtk::ICON_SIZE_SMALL_TOOLBAR.
+   * If the stock icon name isn't known, a "broken image" icon will be displayed instead.
+   * You can register your own stock icon names - see Gtk::IconFactory::add().
+   * @param stock_id A stock icon.
+   * @param size A stock icon size.
+   */
   Image(const Gtk::StockID& stock_id, IconSize size);
+
   Image(IconSet& icon_set, IconSize size);
   Image(const Glib::RefPtr<Gdk::PixbufAnimation>& animation);
-  
 
   _WRAP_METHOD(void set(const Glib::RefPtr<Gdk::Pixmap>& pixmap, const Glib::RefPtr<Gdk::Bitmap>& mask), gtk_image_set_from_pixmap)
   _WRAP_METHOD(void set(const Glib::RefPtr<Gdk::Image>& gdk_image, const Glib::RefPtr<Gdk::Bitmap>& mask), gtk_image_set_from_image)
@@ -87,14 +95,14 @@ public:
   void get_icon_set(IconSet& icon_set, IconSize& size) const;
   _WRAP_METHOD(Glib::RefPtr<Gdk::PixbufAnimation> get_animation(), gtk_image_get_animation, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Gdk::PixbufAnimation> get_animation() const, gtk_image_get_animation, refreturn)
-  
+
   Glib::ustring get_icon_name() const;
   Glib::ustring get_icon_name(IconSize& size);
   _IGNORE(gtk_image_get_icon_name)
 
  _WRAP_METHOD(int get_pixel_size() const, gtk_image_get_pixel_size)
  _WRAP_METHOD(void set_pixel_size(int pixel_size), gtk_image_set_pixel_size)
- 
+
   _WRAP_PROPERTY("pixbuf", Glib::RefPtr<Gdk::Pixbuf>)
   _WRAP_PROPERTY("pixmap", Glib::RefPtr<Gdk::Pixmap>)
   _WRAP_PROPERTY("image", Glib::RefPtr<Gdk::Image>)
