@@ -40,7 +40,7 @@ public:
   /** Creates a new ToolButton.
    */
   _CTOR_DEFAULT()
-  
+ 
   /** Creates a new ToolButton from a StockID.
    *
    * The ToolButton will be created according to the @a stock_id properties.
@@ -48,7 +48,7 @@ public:
    * @param stock_id The StockID which determines the look of the ToolButton.
    */
   _WRAP_CTOR(ToolButton(const Gtk::StockID& stock_id), gtk_tool_button_new_from_stock)
-  
+
   /** Creates a new ToolButton with a label.
    *
    * The ToolButton will have the label @a label.
@@ -56,7 +56,7 @@ public:
    * @param label The string used to display the label for this ToolButton.
    */
   explicit ToolButton(const Glib::ustring& label);
-  
+
   /** Creates a new ToolButton with an image.
    *
    * The ToolButton will have the label @a label and an image widget @a icon_widget.
