@@ -1,3 +1,13 @@
+2005-04-24  Murray Cumming <murrayc@murrayc.com>
+
+	* gtk/src/button.hg:
+	* gtk/src/gtk_docs_override.xml:
+	* gtk/src/image.hg:
+	* gtk/src/toolbutton.hg:
+	Documentation: Change mentions of new_from_stock() 
+	to mention the C++ constructors, and document those 
+	constructors. 
+
 2005-04-22  Murray Cumming <murrayc@murrayc.com>
 
 	* gtk/src/cellrenderer.hg: Add documentation 
